# voxium

./: .dockerignore  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  Architecture.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY_AUDIT.md  SETUP.md  TODO-LIST.md  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  package.json  playwright.config.ts  pnpm-lock.yaml
.github/: CODEOWNERS
.github/DISCUSSION_TEMPLATE/: ideas.yml  questions.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: copilot-review.instructions.md
.github/workflows/: ci.yml  docker.yml  enforce-source-branch.yml  release.yml
apps/admin/: index.html  package.json  vite.config.ts
apps/admin/src/: App.tsx  main.tsx
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.example  eslint.config.js  package.json  prisma.config.ts  setup-s3-cors.ts  vitest.config.ts
scripts/: load-test-voice.ts  test-multi-node.ts  test-permissions.ts  test-voice-optimizations.ts
tests/e2e/: admin-flow.spec.ts  auth-edge-cases.spec.ts  auth.spec.ts  critical-path.spec.ts  dm-flow.spec.ts  email-verification.spec.ts  global-setup.ts  global-teardown.ts  mentions.spec.ts  totp.spec.ts  voice-sfu.spec.ts
(+281 files in other folders)
