[package]
name = "voxium"
version = "1.2.0"
description = "Voxium - Modern voice & text communication platform"
authors = ["Voxium Team"]
edition = "2021"

[lib]
name = "voxium_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
